--- a/css/grupp_24.css
+++ b/css/grupp_24.css
@@ -1,14 +1,90 @@
 * {
-    font-family: Helvetica, Arial, sans-serif;
-    width: 1366px;
-    height: 1669;
-    margin: 0px;
     box-sizing: border-box;
 }
 
+body {
+    width: 1336px;
+    font-family: Helvetica, Arial, sans-serif;
+    /*background-image: url("/home/viktor/webbprojekt-main/img/mall_pluto.png");
+    opacity: 50%;*/
+}
+
+img {
+    width: 550px;
+}
+
+header {
+    color: white;
+    background-color: #000000;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+header p {
+    display: flex;
+    color: #fff6e6;
+}
+
+#two {
+    display: flex;
+    flex-direction: column;
+}
+
+#three {
+    display: flex;
+    justify-content: right;
+}
+
+.four {
+    padding-left: 3rem;
+}
+
+main {
+    background-color: #fff6e6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 1030px;
+}
+
+main p {
+    color: #444444
+}
+
+#twenty {
+    display: flex;
+    flex-direction: column;
+}
+
+#four {
+    display: flex;
+    justify-content: flex-start;
+}
+
+#five {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+}
+
+footer {
+    background-color: #000000;
+    height: 142px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 h1 {
-    padding-top: 200px;
     color: #00a1e0;
+    font-size: 5rem;
+    font-weight: 1000;  
+    margin: 0px;
+}
+
+h1 p {
+    margin: 0px;
 }
 
 h2 {
@@ -20,45 +96,23 @@ h3 {
 }
 
 a {
-    color: white;
+    color: #fff6e6;
     text-decoration: none;
 }
 
 table {
     color: #00648b;
+    border-collapse: collapse;
+    border: none;
 }
 
-td.left{
-    font-family: "Courier New, Courier", monospace;
+td.left {
+    font-family: "Courier New", Courier, monospace;
+    font-weight: bold;
+    border-right: 2px solid #00648b;
 }
 
-header {
-    height: 450px;
-    font-family: "Helvetica, Arial, sans-serif";
-    background-color: #000000;
-}
-
-header p {
-    color: white;   
-}
-
-/*.planets {
-    padding-bottom: 700 px;
-}*/
 
 img {
-    width: 200px
-}
-
-main {
-    background-color: #fff6e6;
-}
-
-main p {
-    color: #444444
-}
-
-footer {
-    text-align: center; 
-    background-color: #000000;
+    width: 550px;
 }
