--- a/css/grupp_24.css
+++ b/css/grupp_24.css
@@ -52,15 +52,18 @@ main {
     height: 1030px;
     background-color: #fff6e6;
     display: grid;
-    /*justify-content: space-between;*/
-    row-gap: 25px;
-    padding-bottom: 230px;
+    grid-template-rows: 243px 100px;
+    row-gap: 30px;
+    column-gap: 25px;
     padding-left: 135px;
+    padding-right: 10px;
 }
 
 main p {
     font-size: 1.1rem;
-    color: #444444
+    color: #444444;
+    line-height: 28px;
+    padding-bottom: 32px;
 }
 
 #four {
@@ -108,13 +111,16 @@ h1 p {
 }
 
 h2 {
-    font-size: 3rem;
+    font-size: 45px;
     color: #444444;
 }
 
 h3 {
-    font-size: 1.5rem;
+    font-size: 22px;
+    word-spacing: -1px;
+    letter-spacing: 2px;
     color: #00648b;
+    padding-bottom: 9px;
 }
 
 a {
@@ -130,14 +136,21 @@ table {
 }
 
 td {
-    padding: 16px;
+    padding: 12px;
 }
 
 td.left {
     font-family: "Courier New", Courier, monospace;
-    font-weight: bold;
+    font-weight: 1000;
+    font-size: 18px;
     border-right: 2px solid #00648b;
     text-align: right;
+    letter-spacing: 1px;
+    word-spacing: -5px;
+}
+
+td.right {
+    
 }
 
 img {
