--- a/css/grupp_24.css
+++ b/css/grupp_24.css
@@ -8,7 +8,7 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     background-image: url("mall_pluto.png");
     background-repeat: no-repeat;
-    opacity: 80%;
+    opacity: 75%;
 }
 
 img {
@@ -19,12 +19,15 @@ header {
     color: white;
     background-color: #000000;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    padding-left: 136px;
+    padding-bottom: 35px;
     height: 498px;
 }
 
 header p {
+    font-size: 24px;
     display: flex;
     color: #fff6e6;
 }
@@ -32,6 +35,12 @@ header p {
 header a {
     font-size: 18px;
     font-weight: 900;
+}
+
+#one{
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
 }
 
 #two {
